--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<title>Where should Rashi move</title>
 </head>
 <body>
-	<p>Seattle</p>
+	<center>
+		<h2>Seattle</h2>
+	</center>
 </body>
 </html>
